--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!doctype html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 	</head>
 	<body style="margin: 0; background-color: black;">
-		<canvas id = "textcanvas" style="border-style: solid; margin: 0; padding: 0; display: block; position: absolute; left: 0px; top: 0px; z-index: 10;"></canvas>
-		<canvas id = "glcanvas" style="border-style: solid; margin: 0; padding: 0; display: block; position: absolute; left: 0px; top: 0px; z-index: 0;">Support for the canvas element is required.</canvas>
+		<canvas id = "textcanvas" style="border-style: none; margin: 0; padding: 0; display: block; position: absolute; left: 0px; top: 0px; z-index: 10;"></canvas>
+		<canvas id = "glcanvas" style="border-style: none; margin: 0; padding: 0; display: block; position: absolute; left: 0px; top: 0px; z-index: 0;">Support for the canvas element is required.</canvas>
 		
 		<script src='gl-matrix-min.js'></script>
 		<script src='shaders.js'></script>
-		<script src='box.js'></script>
+		<script src='wedge_v1.js'></script>
 
-		<script id="vertex_shader" type="x-shader/x-vertex">
+		<script id="line-vertex_shader" type="x-shader/x-vertex">
 			uniform mat4 modelview_matrix;
 			uniform mat4 projection_matrix;
 			attribute vec3 vertex_coordinates;
@@ -20,12 +21,31 @@
 				gl_Position = projection_matrix * modelview_matrix * vec4(vertex_coordinates, 1.0);
 			}
 		</script>
-		<script id="fragment_shader" type="x-shader/x-fragment">
+		<script id="line-fragment_shader" type="x-shader/x-fragment">
 			precision mediump float;
 
 			void main(void)
 			{
 				gl_FragColor = vec4(1, 1, 1, 1);
+			}
+		</script>
+		<script id="solid-vertex_shader" type="x-shader/x-vertex">
+			uniform mat4 modelview_matrix;
+			uniform mat4 projection_matrix;
+			attribute vec3 vertex_coordinates;
+
+			void main(void)
+			{ 
+				gl_Position = projection_matrix * modelview_matrix * vec4(vertex_coordinates, 1.0);
+			}
+		</script>
+		<script id="solid-fragment_shader" type="x-shader/x-fragment">
+			precision mediump float;
+			uniform vec4 solid_color;
+
+			void main(void)
+			{
+				gl_FragColor = solid_color;
 			}
 		</script>
 
@@ -38,14 +58,24 @@
 			return angle_in_degrees * (Math.PI / 180);
 		}
 
-		function ProjectText(P, mvp, ctx, text)
+		function ProjectText(P, mvp, ctx, text, angle)
 		{
+			angle = angle || 0;
 			var p = vec4.clone(P);
 			vec4.transformMat4(p, p, mvp);
 			p[0] /= p[3];
 			p[1] /= p[3];
 			var c = vec2.fromValues((p[0] * 0.5 + 0.5) * gl.canvas.width, (p[1] * -0.5 + 0.5) * gl.canvas.height);
-			ctx.fillText(text, c[0], c[1]);
+			ctx.setTransform(1, 0, 0, 1, c[0], c[1]);
+			ctx.rotate(angle);
+			ctx.fillText(text, 0, 0);
+			ctx.rotate(-angle);
+			ctx.setTransform(1, 0, 0, 1, 0, 0);
+		}
+
+		function EaseInOut(t) { 
+			//return t < 0.5 ? 4*t*t*t : (t-1)*(2*t-2)*(2*t-2)+1;
+			return 1+(--t)*t*t*t*t;
 		}
 
 		function DrawScene(now)
@@ -55,22 +85,41 @@
 			var mvp = mat4.create();
 			var p = vec4.create();
 			var c = vec2.create();
+			var counter = 0;
 
 			now = now / 1000;
+			now = now % 6;
+			now = now / 6;
+			if (now < 0.05) 
+				winning_rotation = Math.random() * Math.PI * 2.0 + Math.floor(Math.random() * 6 * Math.PI) + 2 * Math.PI;
+
+
+
+			wr = EaseInOut(now) * winning_rotation;
+			
 			ctx.clearRect(0, 0, ctx.canvas.width, ctx.canvas.height);
 			gl.clearColor(0.1, 0.1, 0.1, 1.0);
 			gl.clear(gl.COLOR_BUFFER_BIT);
 			gl.viewport(0, 0, canvas.clientWidth, canvas.clientHeight);
 
-			mat4.lookAt(modelview_matrix, vec3.fromValues(0.0, 0.0, 10.0), vec3.fromValues(0.0, 0.0, 0.0), y_axis);
+			mat4.lookAt(modelview_matrix, vec3.fromValues(0.0, 0.0, 5.0), vec3.fromValues(0.0, 0.0, 0.0), y_axis);
 			mat4.perspective(projection_matrix, Radians(30.0), canvas.clientWidth / canvas.clientHeight, near_plane, far_plane);
-			mat4.translate(modelview_matrix, modelview_matrix, vec3.fromValues(0, 0.0, 4 * Math.sin(Radians(now * 30))));
-			mat4.rotate(modelview_matrix, modelview_matrix, Radians(now * 180), vec3.fromValues(1.0, 1.0, 1.0));		
-			mat4.multiply(mvp, projection_matrix, modelview_matrix);
-			ProjectText(vec4.fromValues(-1, -1, 0, 1), mvp, ctx, "(-1,-1)");
-			ProjectText(vec4.fromValues(1, 1, 0, 1), mvp, ctx, "(1,1)");
+			mat4.rotate(modelview_matrix, modelview_matrix, wr, vec3.fromValues(0.0, 0.0, 1.0));		
+//			ProjectText(vec4.fromValues(-1, -1, 0, 1), mvp, ctx, "(-1,-1)");
+//			ProjectText(vec4.fromValues(1, 1, 0, 1), mvp, ctx, "(1,1)");
 			
-			box.Draw(modelview_matrix, projection_matrix);
+			var m = mat4.create();
+			var r = 0;
+			var step = Radians(360) / wedge_count;
+			for (counter = 0; counter < wedge_count; counter++) {
+				var solid_color = (counter % 2) ? vec4.fromValues(1, 0, 0, 1) : vec4.fromValues(0.8, 0, 0, 1);
+				mat4.rotate(modelview_matrix, modelview_matrix, step,  vec3.fromValues(0.0, 0.0, 1.0));
+				wedge.Draw(modelview_matrix, projection_matrix, solid_color);
+				mat4.rotate(m, modelview_matrix, -step / 2.0, vec3.fromValues(0, 0, 1.0));
+				mat4.multiply(mvp, projection_matrix, m);
+				ProjectText(vec4.fromValues(0.9, 0, 0, 1), mvp, ctx, counter.toString(), -wr - r);
+				r = r + step;
+			}
 			requestAnimationFrame(DrawScene);
 		}
 
@@ -79,19 +128,22 @@
 		var z_axis = vec3.fromValues(0, 0, 1);
 		var near_plane = 1;
 		var far_plane = 100;
+		var wedge_count = 36;
+		var steps = 16.0;
+		var winning_rotation = 0;
 
 		var canvas = document.getElementById('glcanvas');
 		var textCanvas = document.getElementById("textcanvas");
 		var gl = canvas.getContext('webgl');
 		var ctx = textCanvas.getContext("2d");
-		var box = new Box();
-		box.Initialize();
-		canvas.width = textCanvas.width = window.innerWidth - 10;
-		canvas.height = textCanvas.height = window.innerHeight - 10;
+		var wedge = new WedgeV1();
+		wedge.Initialize(wedge_count, steps);
+		canvas.width = textCanvas.width = window.innerWidth;
+		canvas.height = textCanvas.height = window.innerHeight;
 
-		ctx.font = "32px Helvetica";
-		ctx.textAlign = "left";
-		ctx.textBaseline = "bottom";
+		ctx.font = "24px Helvetica";
+		ctx.textAlign = "center";
+		ctx.textBaseline = "middle";
 		ctx.fillStyle = "#ffffff";
 
 		requestAnimationFrame(DrawScene);
